# fnf

./: CLAUDE.md  Cargo.toml  README.md  REVIEW.md  release.toml
.github/workflows/: rpm.yml
pkg/: fnf.spec  make-sources.sh  pre-release.sh
src/: cmd.rs  main.rs  model.rs  size.rs  stderr.rs  stdout.rs
