[package]
name = "fnf"
version = "0.2.0"
edition = "2024"
license = "MIT"
publish = false
description = "dnf wrapper with yay-style colored version diffs"
documentation = "https://github.com/sebdotv/fnf"
repository = "https://github.com/sebdotv/fnf"

[[bin]]
name = "fnf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3"
indicatif = "0.18"
